[package]
name = "convolution"
version = "0.1.0"
authors = ["zicog <zicog@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast-floats = "0.1.2"
rayon = "1.3.0"
instant = "0.1.4"
paste = "0.1"

[build-dependencies]
cc = "1.0.*"
